<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">UMKM ku</string>
    <string name="app_desc">Pendataan Usaha Mikro Kecil Menengah</string>
    <string name="copyright">Rahmat Trinanda\n2020</string>

    <string name="masuk">Masuk</string>
    <string name="daftar">Daftar</string>
    <string name="nama">Nama</string>
    <string name="email">E-Mail</string>
    <string name="telepon">Telepon</string>
    <string name="password">Password</string>
    <string name="kPassword">Konfirmasi Password</string>
    <string name="bAkun">Belum Punya Akun? </string>
    <string name="sAkun">Sudah Punya Akun? </string>
    <string name="isiKolom">Kolom wajib diisi!</string>
    <string name="passSama">Password Tidak Sama!</string>

    <string name="reqLoc">Ijinkan akses lokasi agar dapat melanjutkan.</string>
    <string name="nyalaGps">Hidupkan lokasi agar dapat melanjutkan.</string>
    <string name="turnOn">Nyalakan Lokasi</string>
    <string name="openSetting">Buka Pengaturan</string>
    <string name="keluar">Keluar</string>
    <string name="vertical_ellipsis">&#8942;</string>

    <string name="terdekat">Disekitar Anda</string>
    <string name="populer" tools:ignore="Typos">Sedang Populer</string>
    <string name="terbaru">UMKM Baru</string>
    <string name="lainnya">Lainnya</string>
    <string name="selengkapnya">Selengkapnya</string>
    <string name="tdkAdaData">Tidak Ada Data</string>
    <string name="gagalMuat">Gagal Memuat Data</string>

    <string name="maps">Maps</string>
    <string name="infoPemilik">Informasi Pemilik</string>
    <string name="infoUmkm">Informasi UMKM</string>
    <string name="edit">Edit</string>
    <string name="hapus">Hapus</string>
    <string name="tambah">Tambah Data</string>
    <string name="namaUmkm">Nama Umkm</string>
    <string name="hpUmkm">Telepon Umkm</string>
    <string name="emailUmkm">Email Umkm</string>
    <string name="namaPemilik">Nama Pemilik</string>
    <string name="hpPemilik">Telepon Pemilik</string>
    <string name="emailPemilik">Email Pemilik</string>
    <string name="lokasi">Lokasi</string>
    <string name="lon">Longitude</string>
    <string name="lat">Latitude</string>
    <string name="foto">Foto</string>
    <string name="gpsSkrg">Gunakan Lokasi Saat Ini</string>
    <string name="ganti">Ganti Foto</string>
    <string name="jk">Jenis Kelamin</string>
</resources>
