<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:scrollbars="none"
    tools:context=".page.TambahUmkmActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:title="@string/tambah"
            app:titleTextColor="@android:color/white" />

    </com.google.android.material.appbar.AppBarLayout>


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="6dp"
                app:cardCornerRadius="8dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/infoUmkm"
                        android:textColor="@android:color/black"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginTop="16dp">

                        <EditText
                            android:id="@+id/namaUmkm"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center_vertical"
                            android:autofillHints="@string/namaUmkm"
                            android:hint="@string/namaUmkm"
                            android:inputType="textPersonName"
                            android:textColor="@android:color/black"
                            android:textColorHighlight="@color/colorPrimaryDark" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginTop="16dp">

                        <EditText
                            android:id="@+id/hpUmkm"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center_vertical"
                            android:autofillHints="@string/hpUmkm"
                            android:hint="@string/hpUmkm"
                            android:inputType="phone"
                            android:textColor="@android:color/black"
                            android:textColorHighlight="@color/colorPrimaryDark" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginTop="16dp">

                        <EditText
                            android:id="@+id/emailUmkm"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center_vertical"
                            android:autofillHints="@string/emailUmkm"
                            android:hint="@string/emailUmkm"
                            android:inputType="textEmailAddress"
                            android:textColor="@android:color/black"
                            android:textColorHighlight="@color/colorPrimaryDark" />

                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:elevation="6dp"
                app:cardCornerRadius="8dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/infoPemilik"
                        android:textColor="@android:color/black"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginTop="16dp">

                        <EditText
                            android:id="@+id/namaPemilik"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center_vertical"
                            android:autofillHints="@string/namaPemilik"
                            android:hint="@string/namaPemilik"
                            android:inputType="textPersonName"
                            android:textColor="@android:color/black"
                            android:textColorHighlight="@color/colorPrimaryDark" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginTop="16dp">

                        <EditText
                            android:id="@+id/hpPemilik"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center_vertical"
                            android:autofillHints="@string/hpPemilik"
                            android:hint="@string/hpPemilik"
                            android:inputType="phone"
                            android:textColor="@android:color/black"
                            android:textColorHighlight="@color/colorPrimaryDark" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginTop="16dp">

                        <EditText
                            android:id="@+id/emailPemilik"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center_vertical"
                            android:autofillHints="@string/emailPemilik"
                            android:hint="@string/emailPemilik"
                            android:inputType="textEmailAddress"
                            android:textColor="@android:color/black"
                            android:textColorHighlight="@color/colorPrimaryDark" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:id="@+id/jkPemilik"
                        android:textSize="20sp"
                        android:hint="@string/jk"
                        app:met_floatingLabel="highlight" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:elevation="6dp"
                app:cardCornerRadius="8dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/lokasi"
                        android:textColor="@android:color/black"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginTop="16dp">

                        <EditText
                            android:id="@+id/longitude"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center_vertical"
                            android:autofillHints="@string/lon"
                            android:hint="@string/lon"
                            android:inputType="text"
                            android:textColor="@android:color/black"
                            android:textColorHighlight="@color/colorPrimaryDark" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginTop="16dp">

                        <EditText
                            android:id="@+id/latitude"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center_vertical"
                            android:autofillHints="@string/lat"
                            android:hint="@string/lat"
                            android:inputType="text"
                            android:textColor="@android:color/black"
                            android:textColorHighlight="@color/colorPrimaryDark" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <Button
                        android:id="@+id/lokSkrg"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bg_button_green"
                        android:text="@string/gpsSkrg"
                        android:textColor="@android:color/white" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cvUpload"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="16dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="10dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_centerInParent="true"
                        android:layout_marginTop="60dp"
                        android:orientation="vertical"
                        android:padding="10dp"
                        tools:ignore="UseCompoundDrawables">

                        <ImageView
                            android:layout_width="75dp"
                            android:layout_height="75dp"
                            android:layout_gravity="center"
                            android:src="@drawable/ic_addfoto"
                            android:tint="@color/colorPrimaryDark"
                            tools:ignore="ContentDescription" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:text="Upload Foto Produk"
                            tools:ignore="HardcodedText" />

                    </LinearLayout>

                    <ImageView
                        android:id="@+id/produkImage"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:adjustViewBounds="true"
                        android:background="@color/colorPrimary"
                        android:scaleType="fitXY"
                        android:visibility="gone"
                        tools:ignore="ContentDescription" />

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/tambahData"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:background="@drawable/bg_button_primary"
                android:text="@string/tambah"
                android:textColor="@android:color/white" />

            <ProgressBar
                android:id="@+id/pBar"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_marginTop="32dp"
                android:progressBackgroundTint="@color/colorPrimaryDark"
                android:visibility="gone" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>